<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_config"
        android:icon="@drawable/a89070784_152102999240541_7129737138328829952_n"
        android:title="Network " />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/graphicon"
        android:title="Well-being" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messageicon"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/a89177037_2581050955553594_3071851332693393408_n"
        android:title="@string/title_settings" />

</menu>
